# pdg2025-fcen-uba-TP-3

./: README.md
forms/: GuiPanelGeneral.ui  GuiPanelPolygonMesh.ui  GuiPanelRendering.ui  GuiPanelSceneGraph.ui  GuiPanelSelection.ui  GuiPanelTemplate.ui
qt/: DGP2025-A3.pri  DGP2025-A3.pro
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Edges.cpp  Edges.hpp  Faces.cpp  Faces.hpp  Geometry.cpp  Geometry.hpp  Graph.cpp  Graph.hpp  HalfEdges.cpp  HalfEdges.hpp  HexGridPartition.cpp  HexGridPartition.hpp  Partition.cpp  Partition.hpp  PolygonMesh.cpp  PolygonMesh.hpp  PolygonMeshTest.cpp  PolygonMeshTest.hpp  Variable.cpp  Variable.hpp
src/gui/: GuiAboutDialog.cpp  GuiAboutDialog.hpp  GuiApplication.cpp  GuiApplication.hpp  GuiGLBuffer.cpp  GuiGLBuffer.hpp  GuiGLHandles.cpp  GuiGLHandles.hpp  GuiGLShader.cpp  GuiGLShader.hpp  GuiGLWidget.cpp  GuiGLWidget.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiPanel.cpp  GuiPanel.hpp  GuiPanelGeneral.cpp  GuiPanelGeneral.hpp  GuiPanelPolygonMesh.cpp  GuiPanelPolygonMesh.hpp  GuiPanelRendering.cpp  GuiPanelRendering.hpp  GuiPanelSceneGraph.cpp  GuiPanelSceneGraph.hpp  GuiPanelSelection.cpp  GuiPanelSelection.hpp  GuiPanelTemplate.cpp  GuiPanelTemplate.hpp  GuiQtLogo.cpp  GuiQtLogo.hpp  GuiSceneGraphTree.hpp  GuiStrings.hpp  GuiViewerApp.cpp  GuiViewerData.cpp  GuiViewerData.hpp
src/io/: AppLoader.cpp  AppLoader.hpp  AppSaver.cpp  AppSaver.hpp  CMakeLists.txt  Loader.hpp  LoaderPly.cpp  LoaderPly.hpp  LoaderStl.cpp  LoaderStl.hpp  (+16 more)
src/test/: CMakeLists.txt  dgpPrt.cpp  dgpPrt.hpp  dgpTest3.cpp
src/wrl/: Appearance.cpp  Appearance.hpp  CMakeLists.txt  Group.cpp  Group.hpp  ImageTexture.cpp  ImageTexture.hpp  IndexedFaceSet.cpp  IndexedFaceSet.hpp  IndexedFaceSetPly.cpp  IndexedFaceSetPly.hpp  IndexedFaceSetVariables.cpp  IndexedFaceSetVariables.hpp  IndexedLineSet.cpp  IndexedLineSet.hpp  IndexedLineSetVariables.cpp  IndexedLineSetVariables.hpp  Material.cpp  Material.hpp  Node.cpp  Node.hpp  PixelTexture.cpp  PixelTexture.hpp  Ply.cpp  Ply.hpp  Rotation.cpp  Rotation.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphProcessor.cpp  SceneGraphProcessor.hpp  SceneGraphTraversal.cpp  SceneGraphTraversal.hpp  Shape.cpp  Shape.hpp  Transform.cpp  Transform.hpp  Types.cpp  Types.hpp
(+7 files in other folders)
